syntax = "proto3";

option java_package = "ru.vtb.s7.client.mkb.grpc";
//option java_outer_classname = "ConnectPoints";
option java_multiple_files = true;

message AuthorizationRequest {
    string name = 1;
}

