syntax = "proto3";

package ru.vtb.blockchain.client.mkb.grpc;

//option java_outer_classname = "ConnectPoints";
option java_multiple_files = true;

import "handshake.proto";

service Connect {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}
